Document notes on java modularization
Document findings that could be helpful in future efforts of
modularizing Bisq 2.